# bufkit-data

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  README.tpl  appveyor.yml
.github/workflows/: ci.yml
example_data/: 2017040100Z_gfs_kmso.buf  2017040100Z_nam_kmso.buf  2017040106Z_gfs3_kmso.buf  2017040106Z_namm_kmso.buf  2017040112Z_gfs3_kmso.buf  2017040112Z_nam_kmso.buf  2017040118Z_gfs3_kmso.buf  2017040118Z_namm_kmso.buf
src/: archive.rs  cmd_line.rs  coords.rs  create_index.sql  errors.rs  inventory.rs  lib.rs  models.rs  py_lib.rs  site.rs
src/archive/: add_data.rs  clean.rs  modify.rs  query.rs  root.rs
src/archive/add_data/: add_file.sql  add_site.sql  find_file_name.sql  insert_site_id.sql  remove_site_id_by_station_num.sql  update_site.sql
src/archive/modify/: add_file.sql  add_site.sql  delete_file_by_name.sql  delete_file_from_index.sql  delete_site.sql  find_all_files_for_site.sql  update_site.sql
src/archive/query/: auto_download_info.rs  retrieve_sites.sql  sites_and_ids_for_model.sql  station_num_for_id_and_model.sql  station_summary.rs  station_summary.sql
src/archive/root/: create_index.sql
src/site/: state_prov.rs  station_num.rs
