[package]
name = "bufkit-data"
version = "0.18.1"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
description = "A crate to manage an archive of bufkit files."
repository = "https://github.com/rnleach/bufkit-data.git"
readme = "README.md"
keywords = ["meteorology", "weather", "sounding"]
categories = ["science"]
license = "MIT"
edition="2018"

[badges]
appveyor = { repository = "rnleach/bufkit-data", branch = "master", service = "github" }
travis-ci = { repository = "rnleach/bufkit-data", branch = "master" }

[features]
default = []
pylib = ["pyo3"]

[dependencies]
chrono = "^0.4"
flate2 = {version = "1.0", features = ["rust_backend"], default-features = false }
metfor = "^0.7.4"
rusqlite = { version = "0.24", features = ["bundled", "chrono"], default-features = false }
sounding-analysis = "^0.14"
sounding-bufkit = "0.14"
strum = "0.19"
strum_macros = "0.19"
pyo3 = {version = "^0.12", features = ["extension-module"], optional = true}

[dev-dependencies]
tempdir = "0.3"

[lib]
name = "bufkit_data"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true
panic = 'abort'
