[package]
name = "bufkit-data"
version = "0.26.0"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
description = "A crate to manage an archive of bufkit files."
repository = "https://github.com/rnleach/bufkit-data.git"
readme = "README.md"
keywords = ["meteorology", "weather", "sounding"]
categories = ["science"]
license = "MIT"
edition="2024"

[features]
default = []
pylib = ["pyo3"]

[dependencies]
chrono = "^0.4"
flate2 = {version = "1.0", features = ["rust_backend"], default-features = false }
metfor = "^0.10.0"
rusqlite = { version = "0.38", features = ["bundled", "chrono"], default-features = false }
sounding-analysis = "^0.19.1"
sounding-bufkit = "0.18"
strum = "^0.27"
strum_macros = "^0.27"
pyo3 = {version = "^0.27.1", features = ["extension-module"], optional = true}

[dev-dependencies]
tempdir = "0.3"

[lib]
name = "bufkit_data"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true
panic = 'abort'
